<resources>
    <string name="app_name">KonradPodogrski_NBP</string>
    <string name="main_info">Welcome to currency app, click belowe button to take a look on currencies</string>
    <string name="send">Check it out</string>
    <string name="tableA">Table A</string>
    <string name="tableB">Table B</string>
    <string name="gold">Gold</string>
    <string name="converter">Currency converter</string>
    <string name="loading">Loading...</string>
    <string name="toPln">To Pln</string>
    <string name="toOther">From Pln...</string>
    <string name="convert">Convert!</string>
    <string name="convertToSee">Convert to see</string>
    <string name="gold_30_days">gold 30 days</string>
    <string name="current_rate">Current rate:</string>
    <string name="current_rate_amount">0.0</string>
</resources>