<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GoldChartActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_weight="0.05"
            android:gravity="center|center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/goldCurrent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.05"
                android:gravity="center"
                android:text="@string/current_rate"
                android:textAlignment="center"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/goldCurrentRate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.05"
                android:gravity="center"
                android:text="@string/current_rate_amount"
                android:textAlignment="center"
                android:textSize="18sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/gold30"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.05"
            android:gravity="center"
            android:text="@string/gold_30_days"
            android:textAlignment="center"
            android:textSize="14sp" />

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/chart30gold"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.45" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>